# qiime-pipeline

./: .clinerule  .gitignore  Dockerfile  Pipfile  README.md  cluster.yaml  env.yml  environment.yml  machine-setup.ps1  main.py  pipeline-setup.sh  pipeline.sh  pyproject.toml  setup.sh  setup_winrm.ps1
ansible/: Pipfile  bootstrap.ps1  playbook.yml  playbook_boot.yml
ansible/inventory/: hosts.yml
ansible/roles/: requirements.yml
dockerfiles/: Dockerfile
meta/: bat_fleas.csv  cat_fleas.csv  lip_cervi.csv  lip_forti.csv  mky_louse.csv
pipeline/: create_Mfiles.py  create_manifest.py  create_maniffest.py  create_master.py  create_master_csv.py  db.sh  env_set.sh  extract_id.py  main.sh  pipeline.sh  pipeline_env  rarefaction.sh  silva.sh  view.sh
scripts/: __init__.py  check_manifest.py  config.py  create_Mfiles.py  executor.py  extract_id.py  idgen.sh  main.sh  metagenome.sh  pipeline.sh  pipeline_run.py  run.sh  sampling_depth.sh  view.sh
scripts/data_control/: check_manifest.py  container.py  create_Mfiles.py  dataset.py  parse_arguments.py  ribosome_regions.py  used_data.py
scripts/data_store/: dataset.py  setting_data_structure.py  used_data.py
scripts/pipeline/: alpha.sh  ancome.sh  basic.sh  beta.sh  db.sh  main.sh  rarefaction.sh  taxonomy.sh
scripts/pipeline_support/: pipeline_run.py
scripts/setting_data/: __init__.py  (+3 more)
src/: main.py
test/: check_manifest_test.py  conftest.py  container_util.py  createMfiles_test.py  create_mfiles_test.py  executor_test.py  extract_id_test.py  pipeline_run_test.py  test_pipeline_run.py  text_extract_id.py
(+141 files in other folders)
